--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam molestias modi delectus sint culpa temporibus possimus in ipsam assumenda deserunt iste ducimus eligendi, id ex, earum molestiae. Quaerat, dicta aperiam?</p>
     <p>Nisi quos, molestiae illo odit quisquam architecto voluptate placeat accusantium aliquid eius! Accusantium ducimus, alias quas fuga illum odit vel error eveniet? Rerum eligendi voluptatibus nemo totam vitae! Fugiat, enim?</p>
     <p>Quaerat deserunt eum dolore eius, necessitatibus unde maxime voluptatem tempora dolor harum iure, cupiditate amet beatae earum sed debitis porro. Repellendus quam ratione reprehenderit quisquam? Eligendi beatae natus nemo vel?</p>
-    
+
+    <img src="assets/svg/user.svg" alt="">
+    <img src="assets/svg/icon-tropy.svg" alt="">
+    <p>wdawadawdawdwadaw</p>
 </body>
 </html>
